log
Thu Mar 12 07:13:20 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
5a8081b
Thu Mar 19 06:57:22 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:10: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Wimplicit-function-declaration]
   51 |          push_back(L, elementos);
      |          ^~~~~~~~~
      |          pushBack
16af13f
Thu Mar 19 06:57:38 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
59c2543
Thu Mar 19 06:59:41 PM UTC 2026: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:12: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   51 |          n = i;
      |            ^
b7c8b41
Thu Mar 19 07:00:58 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
9241b35
Thu Mar 19 07:06:17 PM UTC 2026: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:78:14: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |    int num = first(L);
      |              ^~~~~
exercises.c:79:15: error: comparison between pointer and integer [-Werror]
   79 |    while (num != NULL)
      |               ^~
exercises.c:81:14: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   81 |          if ((int*)num == elem)
      |              ^
exercises.c:81:24: error: comparison between pointer and integer [-Werror]
   81 |          if ((int*)num == elem)
      |                        ^~
cc1: all warnings being treated as errors
d8f4585
Thu Mar 19 07:06:40 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:81:24: error: comparison between pointer and integer [-Werror]
   81 |          if ((int*)num == elem)
      |                        ^~
exercises.c: In function ‘sumaLista’:
exercises.c:65:11: error: ‘suma’ is used uninitialized [-Werror=uninitialized]
   65 |    return suma;
      |           ^~~~
exercises.c:63:8: note: ‘suma’ was declared here
   63 |    int suma;
      |        ^~~~
cc1: all warnings being treated as errors
c233055
Thu Mar 19 07:07:11 PM UTC 2026: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:24: error: comparison between pointer and integer [-Werror]
   80 |          if ((int*)num == elem)
      |                        ^~
cc1: all warnings being treated as errors
245b69e
Thu Mar 19 07:08:26 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:10: error: ‘n’ undeclared (first use in this function)
   80 |          n = (int*)num;
      |          ^
exercises.c:80:10: note: each undeclared identifier is reported only once for each function it appears in
164ad0a
Thu Mar 19 07:08:38 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:18: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   80 |          int n = (int*)num;
      |                  ^
fce2529
Thu Mar 19 07:09:04 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:18: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   80 |          int n = (int)num;
      |                  ^
cc1: all warnings being treated as errors
cb83269
Thu Mar 19 07:09:59 PM UTC 2026: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:14: error: dereferencing ‘void *’ pointer [-Werror]
   80 |          if (*num == elem)
      |              ^~~~
exercises.c:80:14: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
ef037a8
